_build/html/reports/Visualización.err.log
Traceback (most recent call last):
  File "/Users/claudiorojas/anaconda3/lib/python3.11/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/Users/claudiorojas/anaconda3/lib/python3.11/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/claudiorojas/anaconda3/lib/python3.11/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/claudiorojas/anaconda3/lib/python3.11/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/claudiorojas/anaconda3/lib/python3.11/asyncio/base_events.py", line 653, in run_until_complete
    return future.result()
           ^^^^^^^^^^^^^^^
  File "/Users/claudiorojas/anaconda3/lib/python3.11/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/Users/claudiorojas/anaconda3/lib/python3.11/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/claudiorojas/anaconda3/lib/python3.11/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
<div align="justify"> Un aspecto importante al trabajar con Datos es no solo el análisis sino su visualización. Por lo mismo, es muy importante saber elegir el o los gráficos adecuados para dar cuenta del análisis realizado y de la información que se desea dar a conocer</div>

<div align="justify">Elegir el mejor gráfico para visualizar datos depende de varios factores, entre ellos los tipos de datos que uno posees, el mensaje que deseotransmitir y la audiencia a la que me dirigo. Aquí hay algunas consideraciones para tomar la mejor decisión:</div><br>
------------------

[0;36m  Cell [0;32mIn[1], line 1[0;36m[0m
[0;31m    <div align="justify"> Un aspecto importante al trabajar con Datos es no solo el análisis sino su visualización. Por lo mismo, es muy importante saber elegir el o los gráficos adecuados para dar cuenta del análisis realizado y de la información que se desea dar a conocer</div>[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (1829268129.py, line 1)

